# GameEngine

./: .gitignore  Cargo.toml  README.md  WELCOME.md
src/: animation.rs  main.rs  platforms.rs  player.rs
src/assets/test-characters/: gun-mockup.pixi  test charaterblockbuild.bbmodel
src/cameras/: mod.rs  pan_camera.rs
